# mono-soc-2007

./: ProjectHome.md  README
ben/MonoDevelop.Database/MonoDevelop.Database.Designer/: ChangeLog  Makefile.am  MonoDevelop.Database.Designer.addin.xml  MonoDevelop.Database.Designer.mdp
ben/MonoDevelop.Database/MonoDevelop.Database.Query/: ChangeLog  Makefile.am  MonoDevelop.Database.Query.addin.xml  MonoDevelop.Database.Query.mdp  QueryService.cs  SqlQueryView.cs
ben/MonoDevelop.Database/MonoDevelop.Database.Sql/: AssemblyInfo.cs.in  ChangeLog  ConnectionContextService.cs  DbFactoryService.cs  Makefile.am  MonoDevelop.Database.Sql.addin.xml  MonoDevelop.Database.Sql.mdp  QueryService.cs
ben/MonoDevelop.Database/MonoDevelop.Database.Sql.Npgsql/: ChangeLog  Makefile.am  MonoDevelop.Database.Sql.Npgsql.addin.xml  MonoDevelop.Database.Sql.Npgsql.mdp  NpgsqlConnectionProvider.cs  NpgsqlDbFactory.cs  NpgsqlSchemaProvider.cs
ben/MonoDevelop.Database/MonoDevelop.Database.Sql.SqlServer/: ChangeLog  Makefile.am  MonoDevelop.Database.Sql.SqlServer.addin.xml  MonoDevelop.Database.Sql.SqlServer.mdp  SqlServerConnectionProvider.cs  SqlServerDbFactory.cs  SqlServerPooledDbConnection.cs  SqlServerSchemaProvider.cs
ben/MonoDevelop.Database/MonoDevelop.Database.Sql.Sqlite/: ChangeLog  Makefile.am  Mono.Data.Sql.Sqlite.addin.xml  MonoDevelop.Database.Sql.Sqlite.addin.xml  MonoDevelop.Database.Sql.Sqlite.mdp  SqliteConnectionProvider.cs  SqliteDbFactory.cs  SqliteSchemaProvider.cs
brian/FastCgi/: ChangeLog  FastCgi.mds  configure.ac  fastcgi-mono-server.in  fastcgi-mono-server2.in
brian/FastCgi/FastCgi/: AssemblyInfo.cs  Connection.cs  FastCgi.mdp  Main.cs
brian/FastCgi/Mono.FastCgi/: AssemblyInfo.cs  Mono.FastCgi.mdp  Server.cs  SocketFactory.cs
brian/FastCgi/Mono.WebServer/: ApplicationManager.cs  ApplicationServer.cs  BaseApplicationHost.cs  IApplicationHost.cs  IWebSource.cs  LingeringNetworkStream.cs  Makefile.in  Mono.WebServer.mdp  MonoWorkerRequest.cs
brian/FastCgi/Mono.WebServer.FastCgi/: ApplicationHost.cs  AssemblyInfo.cs  ConfigurationManager.xml  Mono.WebServer.FastCgi.mdp  Responder.cs  WorkerRequest.cs  fastcgi-mono-server.exe.config  server.cs
brian/FastCgi/doc/: index.html  style.css
brian/FastCgi/src/: Makefile.am  Mono.FastCgi.sources  Mono.WebServer.FastCgi.sources
hector/monodoc-branch-78069/engine/: Makefile.am  assembler.cs  error-provider.cs  man-provider.cs  mono-ecma-css.xsl  mono-ecma.xsl  monodoc-ecma.xsd  normalize.cs  provider.cs  validate.check.monodocer.importslashdoc  validate.cs
hector/monodoc-branch-78069/scripts/: Makefile.am
mdavid/CBinding/: CBinding.addin.xml  CBinding.mdp  CCompiler.cs  CCompilerBindingCodon.cs  CCompilerManager.cs  CFormattingStrategy.cs  CLanguageBinding.cs  ChangeLog  Completion.cs  GccCompiler.cs  GppCompiler.cs  ICompiler.cs  Makefile.am  MyClass.cs
mdavid/CBinding/Compiler/: CCompiler.cs  GNUCompiler.cs  GppCompiler.cs  ICompiler.cs
mdavid/CBinding/Gui/: AddPathDialog.cs  CTextEditorExtension.cs  CodeGenerationPanel.cs  CompilerPanel.cs  DataProvider.cs  EditPackagesDialog.cs  OutputOptionsPanel.cs  PackageNodeBuilder.cs  ProjectNodeExtension.cs  ProjectPackagesFolderNodeBuilder.cs  ProjectReferencesExtension.cs
mdavid/CBinding/Navigation/: Class.cs  ClassNodeBuilder.cs  ClassPadEventArgs.cs  Enumerator.cs  EnumeratorNodeBuilder.cs  Function.cs  GlobalsNodeBuilder.cs  LanguageItem.cs  LanguageItemCommandHandler.cs  LanguageItemEventArgs.cs  Macro.cs  MacroNodeBuilder.cs  Member.cs  Namespace.cs  NamespaceNodeBuilder.cs  ProjectNavigationInformation.cs  ProjectNavigationInformationManager.cs  ProjectNodeBuilderExtension.cs  Structure.cs  StructureNodeBuilder.cs  Tag.cs  TagDatabaseManager.cs  Union.cs  UnionNodeBuilder.cs  Variable.cs  VariableNodeBuilder.cs
mdavid/CBinding/Parser/: Enumerator.cs  Function.cs  Member.cs  Namespace.cs  Structure.cs  Tag.cs  TagDatabaseManager.cs
mdavid/CBinding/Project/: CCompilationParameters.cs  CProject.cs  CProjectBinding.cs  CProjectConfiguration.cs  CProjectServiceExtension.cs  ProjectPackage.cs  ProjectPackageCollection.cs  ProjectPackageEventArgs.cs
mdavid/CBinding/ProjectPad/: ProjectPackageNodeBuilder.cs  ProjectPackagesFolderNodeBuilder.cs
mdavid/CBinding/gtk-gui/: CBinding.AddLibraryDialog.cs  CBinding.AddPathDialog.cs  CBinding.CodeGenerationPanel.cs  CBinding.CompilerPanel.cs  CBinding.EditPackagesDialog.cs  CBinding.OutputOptionsPanel.cs  generated.cs  gui.stetic  objects.xml
mdavid/CBinding/icons/: C.File.Empty
mdavid/CBinding/templates/: EmptyCFile.xft.xml  EmptyCProject.xpt.xml  EmptyCSourceFile.xft.xml  EmptyCppHeaderFile.xft.xml  EmptyCppProject.xpt.xml  EmptyCppSourceFile.xft.xml
mdavid/CTagsCompletion/: CTags.cs  CTagsCommandHandler.cs  CTagsCompletion.addin.xml  CTagsCompletion.mdp  CTagsProject.cs  CTagsProjectServiceExtension.cs  CTagsTextEditorExtension.cs  ChangeLog  ITagsSpecialization.cs  Makefile.am  Tag.cs
mdavid/CTagsCompletion/icons/: complete
nestor/rules/Gendarme.Rules.Smells/: AvoidCodeDuplicatedInSameClassRule.cs  AvoidLargeClassesRule.cs  AvoidSpeculativeGeneralityRule.cs  DetectCodeDuplicatedInSameClassRule.cs  DetectLargeClassRule.cs  DetectLongMethodRule.cs  DetectLongParameterListRule.cs  ExpressionFillerVisitor.cs  Gendarme.Rules.Smells.xml.in  Makefile.am
nidhi/rules/Gendarme.Rules.Dodgy/: DontDeclareProtectedFieldsInSealedClassRule.cs  Gendarme.Rules.Dodgy.xml  Makefile.am
trunk/brian/FastCgi/: AUTHORS  ChangeLog  FastCgi.mds  Makefile.am  Mono.FastCgi.snk  fastcgi-mono-server.in  fastcgi-mono-server.mds  fastcgi-mono-server2.in
trunk/jeff/: COPYING  ChangeLog  Makefile.am  aclocal.m4  configure.ac
trunk/jeff/man/: Makefile.am  virtualpaper.1
trunk/jeff/resources/: UILayout.xml
trunk/jeff/src/: Makefile.am  NotebookPaper.cs  Stroke.cs
trunk/mdavid/CBinding/: CBinding.addin.xml  CBinding.mdp  CLanguageBinding.cs  ChangeLog  GccCompiler.cs  GppCompiler.cs  ICompiler.cs  Makefile.am
trunk/nestor/: AUTHORS  Makefile.am  NEWS  configure.ac
trunk/nestor/measurement/: Makefile.am  measurement.in
(+3492 files in other folders)
