EXTRA_DIST = 			\
	mdassembler.in		\
	mdcs2ecma.in		\
	mdnormalizer.in		\
	mdvalidater.in		\
	mod.in			\
	monodocer.in		\
	monodocs2html.in	\
	monodocs2slashdoc.in

bin_SCRIPTS = 			\
	mdassembler		\
	mdcs2ecma		\
	mdnormalizer		\
	mdvalidater		\
	mod			\
	monodocer		\
	monodocs2html		\
	monodocs2slashdoc	

CLEANFILES = $(bin_SCRIPTS)
