SUBDIRS = src

bin_SCRIPTS = \
	$(srcdir)/fastcgi-mono-server \
	$(srcdir)/fastcgi-mono-server2

EXTRA_DIST = \
	Mono.FastCgi.snk \
	fastcgi-mono-server.csproj \
	fastcgi-mono-server.in \
	fastcgi-mono-server2.in

MAINTAINERCLEANFILES = \
	compile \
	INSTALL \
	config.h.in \
	aclocal.m4 \
	ltmain.sh \
	Makefile.in \
	depcomp \
	missing \
	install-sh \
	configure \
	config.sub \
	config.guess \
	mkinstalldirs
